// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default SelectField component 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      ariaLabel="Label"
      defaultValue="blue"
      disabled={false}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      required={false}
      variant="default"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
  </div>
</div>
`;

exports[`should render a default SelectField component with attributes spread onto the select 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      ariaLabel="Label"
      defaultValue="blue"
      disabled={false}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      onClick={[Function]}
      required={false}
      variant="default"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
  </div>
</div>
`;

exports[`should render a disabled SelectField component 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      ariaLabel="Label"
      defaultValue="blue"
      disabled={true}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      required={false}
      variant="default"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
  </div>
</div>
`;

exports[`should render a disabled SelectField component via selectAttrs 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      ariaLabel="Label"
      defaultValue="blue"
      disabled={true}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      required={false}
      variant="default"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
  </div>
</div>
`;

exports[`should render a multiple SelectField component that limits the selection count 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      aria-describedby="select-id-help"
      ariaLabel="Label"
      defaultValue="blue"
      disabled={false}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      maxSelectionCount={2}
      onClick={[Function]}
      required={false}
      variant="multiple"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
    <div
      className="help-text"
      id="select-id-help"
      tabIndex="-1"
    >
      <span>
        Terra.form.select.maxSelectionHelp
         
        Help Text
      </span>
    </div>
  </div>
</div>
`;

exports[`should render a required SelectField component 1`] = `
<div
  className="field-top"
>
  <div
    className="label-group"
  >
    <label
      className="label-top"
      htmlFor="select-id"
    >
      <div
        className="required"
      >
        *
      </div>
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <div
    className="field-content"
  >
    <Select
      allowClear={false}
      ariaLabel="Label"
      defaultValue="blue"
      disabled={false}
      id="select-id"
      isInvalid={false}
      isTouchAccessible={false}
      key=".0"
      required={true}
      variant="default"
    >
      <Option
        disabled={false}
        display="Blue"
        value="blue"
      />
      <Option
        disabled={false}
        display="Green"
        value="green"
      />
      <Option
        disabled={false}
        display="Purple"
        value="purple"
      />
      <Option
        disabled={false}
        display="Red"
        value="red"
      />
      <Option
        disabled={false}
        display="Violet"
        value="violet"
      />
    </Select>
  </div>
</div>
`;
